Ensure grid cell collapses to content height.

--- a/src/sass/partials/_grid.scss
+++ b/src/sass/partials/_grid.scss
@@ -95,7 +95,6 @@
 }
 
 .equal-height > [class*=col-] {
-    height: 100%;
     float: none;
     vertical-align: top;
 }
